<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/register"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_name_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:hint="@string/loginModel"
        android:layout_alignParentStart="true"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/mail_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_register_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/email_alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_below="@+id/mail_register_layout"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail_register_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/password_field"
        android:inputType="textVisiblePassword"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/submit_btn_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_register_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:text="@string/submit"/>



</RelativeLayout>